Add second data-set to graph